# wp

./: Cargo.toml  README.md  deny.toml
.github/workflows/: test.yml
src/: main.rs
tests/: cli.rs
tickbox/pre-commit/: 27-clippy.sh
