[package]
name = "wp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rtlsdr-pure"
keywords = ["shell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "cargo"]}
