[package]
name = "wp-cli"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rtlsdr-pure"
keywords = ["shell"]
description = "Wrap a pipe for safer processing"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"]}
