[package]
name = "wp-cli"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/wp"
keywords = ["shell"]
description = "Wrap a pipe for safer processing"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"]}

[[bin]]
name = "wp"
path = "src/main.rs"
